# ECG2526

Lab1/: CMakeLists.txt  main.cpp
Lab2/: CMakeLists.txt  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  Vector4D.cpp  Vector4D.h  bresenham.cpp  clip.cpp  clip.h  main.cpp  mat3.cpp  mat3.h  mat4.cpp  mat4.h  polygon.cpp  polygon.h  testMatrix.cpp  testMatrix.h  testTransform.cpp  transform.cpp  transform.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
